fixed layout overflow issue

--- a/src/components/MainLayout/MainLayout.scss
+++ b/src/components/MainLayout/MainLayout.scss
@@ -10,4 +10,5 @@
   left:     0;
   right:    0;
   bottom:   0;
+  overflow: hidden;
 }
